<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="title_1">Glide-Image Loading Library By Bump Tech</string>
    <string name="title_2">Load App - Current Repository By Udacity</string>
    <string name="title_3">Retrofit - Type-safe HTTP Client for Android and Java By Square . Inc</string>

    <string name="url1">https://github.com/bumptech/glide</string>
    <string name="url2">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="url3">https://github.com/square/retrofit</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are Loading </string>
    <string name="choose_one_repo">choose at least one repository to download</string>
    <string name="download_notification_channel_name" translatable="true">Downloading Notifications</string>
    <string name="download_notification_channel_id" translatable="false">download_default_channel</string>
    <string name="download_notification_channel_description" translatable="false">Download App by Udacity Notifications</string>
    <string name="download_notification_title">Download Completed</string>
    <string name="details">Details</string>
    <string name="file">File \"</string>
    <string name="downloaded_successfully"> \" downloaded successfully</string>
    <string name="downloading_file"> Downloading File  \" </string>
    <string name="pre_quote_failed">\" failed</string>
    <string name="file_label">File</string>
    <string name="status_label">Status</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="ok">OK</string>


</resources>
