<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="detailsActivityViewModel"
        type="com.udacity.DetailActivityViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/statusMotionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail"
        app:layoutDescription="@xml/content_detail_scene"
        >
        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Success"
            app:text="@{detailsActivityViewModel.statusString}"

            />

            <TextView
                android:id="@+id/fileNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="36sp"/>
            <TextView
                android:id="@+id/fileTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/title_1"
                app:text="@{detailsActivityViewModel.fileName.toString()}"
                android:textColor="@color/colorPrimary"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintStart_toEndOf="@+id/fileNameLabel"
                app:layout_constraintTop_toTopOf="@+id/fileNameLabel"
                />


        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/status_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fileNameLabel"

            />
        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorAccent"
            android:layout_margin="24dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            />

</androidx.constraintlayout.motion.widget.MotionLayout>
</layout>