<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/cloudIconImageViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimaryDark">
    <ImageView
        android:id="@+id/cloudIconImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cloud_download_100"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cloudIconImageViewContainer"

        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"

        android:gravity="center"
        android:foregroundGravity="center"
        >
        <RadioButton
            android:id="@+id/url1RadioButton"
            android:text="@string/title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_margin="8dp"
            android:textAlignment="textStart"
            />
        <RadioButton
            android:id="@+id/url2RadioButton"
            android:text="@string/title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_margin="8dp"
            android:textAlignment="textStart"
            />
        <RadioButton
            android:id="@+id/url3RadioButton"
            android:text="@string/title_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_margin="8dp"
            android:textAlignment="textStart"

            />


    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:LoadingButtonBackgroundColor = "#07C2AA"
        app:LoadingButtonTextColor="#FFFFFF"
        />

</androidx.constraintlayout.widget.ConstraintLayout>